--- a/src/app/modules/admin/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
                             <h3 class="text-center" style="font-size: 20px; font-family: 'Roboto', sans-serif; font-weight: 600;">Iniciar sesión</h3>
                             <!-- Botones apilados -->
                             <button class="btn" [style.background-color]="colorValue2" style="color: white; width: 80%; margin-bottom: 10px; border-radius: 60px;">UTPL</button>
-                            <button class="btn" [style.background-color]="colorValue" style="color: white; width: 80%; margin-bottom: 10px; border-radius: 60px;">Google</button>
+                            <button class="btn" [style.background-color]="colorValue" style="color: white; width: 80%; margin-bottom: 10px; border-radius: 60px;" (click)="tematicas()">Google</button>
                         </div>
                     </div>
                 </div>
