--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<div class="container-fluid p-0">
+<div class="flex h-screen">
+  <!-- Sidebar -->
+  <app-sidebar class="w-64 flex-shrink-0"></app-sidebar>
+
+  <!-- Contenido -->
+  <div class="flex-1 p-6 overflow-auto">
     <router-outlet></router-outlet>
+  </div>
 </div>
-  
