--- a/src/app/modules/admin/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/dashboard/dashboard.component.html
@@ -1,78 +1,1 @@
-<div class="container-fluid p-0">
-
-    <!-- Fila 1: Imagen y título -->
-    <div class="row title">
-        <div class="col-12">
-            <h1>UTPL Administración</h1>
-        </div>
-    </div>
-
-    <!-- Fila 2: Columnas con contenido -->
-    <div class="row" style="background: linear-gradient(to right, #1e3c72, #2a5298);">
-
-        <!-- Columna izquierda -->
-        <div class="col-md-4">
-            <!-- Rectángulo principal con fondo degradado y bordes redondeados -->
-            <div style="width: 60%; height: 700px; background: linear-gradient(to bottom, #398AD5, #F9F9F9); border-radius: 40px; margin: 20px auto;">
-                <!-- Fila 1: Imagen -->
-                <div class="row" style="height: 50%;">
-                    <div class="col-12">
-                        <img src="./assets/marciano3.png" class="img-fluid" style="height: 80%; object-fit: cover; border-radius: 40px 40px 0 0;margin-left: 5%;">
-                    </div>
-                </div>
-            
-                <!-- Fila 2: Rectángulo con texto y botones -->
-                <div class="row" style="height: 50%;">
-                    <div class="col-12">
-                        <!-- Rectángulo blanco con bordes redondeados y ocupa todo el largo de la fila -->
-                        <div class="d-flex flex-column align-items-center justify-content-center" style="background-color: white; border-radius: 40px; width: 100%;height: 100%; padding: 20px;">
-                            <h3 class="text-center" style="font-size: 20px; font-family: 'Roboto', sans-serif; font-weight: 600;">Iniciar sesión</h3>
-                            <!-- Botones apilados -->
-                            <button class="btn" [style.background-color]="colorValue2" style="color: white; width: 80%; margin-bottom: 10px; border-radius: 60px;">UTPL</button>
-                            <button class="btn" [style.background-color]="colorValue" style="color: white; width: 80%; margin-bottom: 10px; border-radius: 60px;" (click)="tematicas()">Google</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-    
-        <!-- Columna derecha -->
-        <div class="col-md-8">
-            <!-- Rectángulo con bordes redondeados, opacidad y desenfoque -->
-            <div style="width: 80%; height: 700px; background-color: rgba(0, 0, 0, 0.4); margin: 20px auto; border-radius: 20px; padding: 30px;">
-                
-                <!-- Título principal -->
-                <h1 style="color: white; font-family: 'Arial', sans-serif;">Botones</h1>
-                
-                <!-- Input de tipo numérico con Bootstrap -->
-                <div class="mb-3">
-                    <hr>
-                    <h3 style="color: #3284FF; font-family: 'Arial', sans-serif;">Google</h3>
-                    <label for="colorSelectorGoogle" class="form-label text-white">Selecciona un color para el botón Google</label>
-                    <div class="input-group" style="width: 40%;">
-                        <input type="text" class="form-control rounded-pill" placeholder="Selecciona un color"[value]="colorValue" readonly>
-                        <input type="color" id="colorSelectorGoogle" [(ngModel)]="colorValue" (input)="onColorChange($event)" style="height: 35px; width: 35px; border: none; padding: 0; margin-left: 10px;">
-                    </div>
-                    <hr>
-                    <h3 style="color: #FFAB00; font-family: 'Arial', sans-serif;">UTPL</h3>
-                    <label for="colorSelectorUTPL" class="form-label text-white">Selecciona un color para el botón UTPL</label>
-                    <div class="input-group" style="width: 40%;">
-                        <input type="text" class="form-control rounded-pill" placeholder="Selecciona un color"[value]="colorValue2" readonly>
-                        <input type="color" id="colorSelectorGoogle" [(ngModel)]="colorValue2" (input)="onColorChange2($event)" style="height: 35px; width: 35px; border: none; padding: 0; margin-left: 10px;">
-                    </div>
-                </div>
-                
-                <!-- Botón "Publicar" -->
-                <button class="btn  w-50 p-3 rounded-pill shadow-lg" style="width: 20%;margin-left: 50%; margin-top: 25%; transform: translateX(-50%);background-color: aliceblue;" (click)="onkeyClikPublic()">Publicar</button>
-        
-            </div>
-        </div>
-    </div>
-    
-
-
-
-
-
-
+<h1>Dashboard</h1>
