--- a/src/app/modules/admin/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/dashboard/dashboard.component.html
@@ -1,1 +1,205 @@
-<h1>Dashboard</h1>
+<div class="p-4 sm:p-6 md:p-8 min-h-screen bg-gradient-to-r from-blue-500 to-purple-700 text-white">
+    <div class="container mx-auto">
+        <div class="mb-8 text-center">
+            <h1 class="text-3xl sm:text-4xl font-bold">UTPL Administrador</h1>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
+            <div class="md:col-span-1 p-6 rounded-2xl shadow-lg bg-indigo-700 h-64 flex flex-col items-center justify-center text-center">
+                <span class="text-6xl font-bold mb-2">{{usuariosSubject.value.length}}</span>
+                <span class="text-xl">Usuarios Registrados</span>
+            </div>
+
+            <div class="md:col-span-2 p-6 rounded-2xl shadow-lg glass-effect h-74 flex flex-col justify-between">
+                <h2 class="text-xl font-semibold mb-4">Intentos realizados por ejercicio</h2>
+                 <div class="flex-grow flex items-center justify-center">
+                    <!-- Contenedor con scroll más alto -->
+                    <div class="flex-grow overflow-y-auto custom-scrollbar max-h-44">
+                        <!-- Listado de usuarios -->
+                        <div *ngFor="let user of usuariosSubject | async; let i = index"
+                            class="flex items-center justify-between py-2 border-b border-white border-opacity-10 last:border-b-0">
+
+                        <!-- Columna izquierda (imagen + nombre) -->
+                        <div class="flex items-center space-x-4 mr-4">
+                            <img 
+                            [src]="user.picture?.trim() !== '' ? user.picture : defaultPicture"
+                            alt="Foto de perfil"
+                            class="w-12 h-12 rounded-full object-cover border"
+                            />
+                            <p class="text-white text-lg font-semibold">{{ user.displayName }}</p>
+                        </div>
+
+                        <!-- Columna derecha fija -->
+                        <div class="flex gap-4">
+                            
+                            <!-- Columna interna izquierda (Gratitud) -->
+                            <div class="w-48 bg-[#FFFFFFB8] rounded-lg py-2 px-4 text-center">
+                            <p class="text-gray-800 font-semibold">Ejercicio de Gratitud</p>
+                            <p class="text-[#1E06A5] text-xl font-bold">{{ countGratitude_tecnica2(user) }}</p>
+                            </div>
+
+                            <!-- Columna interna derecha (Expresiva) -->
+                            <div class="w-48 bg-[#FFFFFFB8] rounded-lg py-2 px-4 text-center">
+                            <p class="text-gray-800 font-semibold">Escritura Expresiva</p>
+                            <br>
+                            <p class="text-[#1E06A5] text-xl font-bold">{{ countExpressive_tecnica3(user) }}</p>
+                            </div>
+                        </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
+            <div class="lg:col-span-3 grid grid-cols-1 gap-6">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+                    <!-- progreso de técnicas por usuario -->
+                    <div class="p-6 rounded-2xl shadow-lg glass-effect flex flex-col justify-between min-h-[16rem]">
+                        <h2 class="text-xl font-semibold mb-4">Progreso de técnicas por usuario</h2>
+
+                        <!-- Contenedor con scroll -->
+                        <div *ngIf="!panel" class="flex-grow overflow-y-auto custom-scrollbar max-h-64">
+                            <!-- Listado de usuarios -->
+                            <div  *ngFor="let user of usuariosSubject | async; let i = index" class="flex items-center justify-between py-2 border-b border-white border-opacity-10 last:border-b-0" >
+                                <!-- columna izquierda-->
+                                <div class="flex items-center space-x-4 mr-2">
+                                    <!-- Imagen -->
+                                    <img 
+                                        [src]="user.picture?.trim() !== '' ? user.picture : defaultPicture"
+                                        alt="Foto de perfil" 
+                                        class="w-12 h-12 rounded-full object-cover border"
+                                    />
+                                    <!-- Nombre -->
+                                    <p class="text-white text-lg font-semibold">{{ user.displayName }}</p>
+                                </div>
+
+
+                                <!-- columna derecha-->
+                                <div>
+                                    <button (click)="visibilityPanel(i)" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 ease-in-out">
+                                    Ver detalle
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div *ngIf="panel" class="flex-grow overflow-y-auto custom-scrollbar max-h-64 p-2 pt-1 space-y-4 justify-start">
+                            <!-- Fila con 3 filas internas (vertical stack) -->
+                            <div class="flex flex-col space-y-4 bg-white bg-opacity-10 p-4 rounded-lg shadow-inner">
+
+                                <!-- Fila 1: Barra de progreso -->
+                                <div>
+                                    <p class="text-white mb-2">Progreso de la técnica 1</p>
+                                    <div class="w-full bg-gray-300 rounded-full h-4 overflow-hidden">
+                                        <div class="bg-green-500 h-4 transition-all duration-700 ease-in-out"[style.width.%]="porcentaje"></div>
+                                    </div>
+                                    <p class="text-white text-sm mt-1">{{ porcentaje }}% completado</p>
+                                </div>
+
+                                <!-- Total completados -->
+                                 <div>
+                                    <p class="text-lg font-medium text-white">
+                                        <span class="text-white">Total de ejercicios</span> → 
+                                        <span class="text-yellow-300 font-bold">{{ complete }}</span>
+                                    </p>
+                                    </div>
+
+                                    <!-- Total faltantes -->
+                                    <div>
+                                    <p class="text-lg font-medium text-white">
+                                        <span class="text-white">Total de ejercicios faltantes</span> → 
+                                        <span class="text-red-400 font-bold">{{ task }}</span>
+                                    </p>
+                                    </div>
+
+                                </div>
+
+                            <!-- Botón para regresar -->
+                            <div class="mt-4">
+                                <button (click)="visibilityPanelClose()"
+                                class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 ease-in-out">
+                                Regresar
+                                </button>
+                            </div>
+                         </div>
+
+                    </div>
+
+
+                    <div class="p-4 rounded-xl shadow-md glass-effect flex flex-col justify-between min-h-[16rem]">
+                        <h2 class="text-lg font-semibold mb-2 text-white">Tiempo por ejercicio</h2>
+                        <!-- Selector de técnica -->
+                        <select [(ngModel)]="selectedTechnique" (change)="onTechniqueChange(selectedTechnique)" class="mb-2 p-1 rounded bg-gray-700 text-white text-sm">
+                            <option value="gratitude">Técnica 2: Gratitude</option>
+                            <option value="expressive">Técnica 3: Expressive</option>
+                        </select>
+                        <div class="flex-grow flex items-center justify-center overflow-y-auto custom-scrollbar">
+                            <div class="w-[200px] h-[200px] md:w-[300px] md:h-[300px]">
+                                <canvas baseChart
+                                        [data]="pieChartData"
+                                        [type]="pieChartType"
+                                        [legend]="true"
+                                        [options]="pieChartOptions"
+                                        [plugins]="[]"
+                                        style="width: 100%; height: 100%;">
+                                </canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                    <div class="md:col-span-2 p-6 rounded-2xl shadow-lg glass-effect flex flex-col justify-between min-h-[16rem]">
+                        <h2 class="text-xl font-semibold mb-4">Técnicas más utilizadas</h2>
+                        <div class="flex-grow flex items-center justify-center">
+                            <p class="text-gray-400">Contenido de "Técnicas más utilizadas"</p>
+                        </div>
+                    </div>
+                    <div class="md:col-span-1 p-6 rounded-2xl shadow-lg glass-effect flex flex-col justify-between min-h-[16rem]">
+                        <h2 class="text-xl font-semibold mb-4">Comentarios</h2>
+                        <div class="flex-grow flex items-center justify-center">
+                            <!-- Contenedor con scroll más alto -->
+                            <div class="flex-grow overflow-y-auto custom-scrollbar max-h-44">
+
+                                <!-- Recorremos usuarios, pero solo mostramos si tienen comentarios -->
+                                <div *ngFor="let user of usuariosSubject | async; let i = index">
+                                    <div *ngIf="user.comments && (user.comments | keyvalue).length > 0" class="flex justify-between py-2 border-b border-white border-opacity-10 last:border-b-0">
+                                        <!-- Columna izquierda: contenedor vertical -->
+                                        <div class="flex flex-col mr-4">
+                                            <!-- Imagen + Nombre en fila -->
+                                            <div class="flex items-center space-x-4">
+                                                <img [src]="user.picture?.trim() !== '' ? user.picture : defaultPicture" alt="Foto de perfil" class="w-12 h-12 rounded-full object-cover border"/>
+                                                <p class="text-white text-lg font-semibold">{{ user.displayName }}</p>
+                                            </div>
+
+                                            <!-- Comentarios debajo -->
+                                            <div class="mt-2">
+                                                <ng-container *ngFor="let com of commentUser(user)">
+                                                    <p class="text-white text-sm italic">{{ com}}</p>
+                                                    <hr class="border-white my-1" />
+                                                </ng-container>
+                                            </div>
+                                        </div>
+                                    </div>
+                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="lg:col-span-1 p-6 rounded-2xl shadow-lg bg-white bg-opacity-10 flex flex-col justify-between min-h-[16rem]">
+                <h2 class="text-xl font-semibold mb-4">Usuarios Activos</h2>
+                <div class="flex-grow flex items-center justify-center">
+                    <p class="text-gray-400">Contenido de "Usuarios Activos"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
