--- a/src/app/modules/admin/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/dashboard/dashboard.component.html
@@ -61,7 +61,7 @@
                         <h2 class="text-xl font-semibold mb-4">Progreso de técnicas por usuario</h2>
 
                         <!-- Contenedor con scroll -->
-                        <div *ngIf="!panel" class="flex-grow overflow-y-auto custom-scrollbar max-h-64">
+                        <div *ngIf="!panel" class="flex-grow overflow-y-auto custom-scrollbar h-[300px]">
                             <!-- Listado de usuarios -->
                             <div  *ngFor="let user of usuariosSubject | async; let i = index" class="flex items-center justify-between py-2 border-b border-white border-opacity-10 last:border-b-0" >
                                 <!-- columna izquierda-->
@@ -154,42 +154,40 @@
 
 
                 
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                    <div class="md:col-span-2 p-6 rounded-2xl shadow-lg glass-effect flex flex-col justify-between min-h-[16rem]">
-                        <h2 class="text-xl font-semibold mb-4">Técnicas más utilizadas</h2>
-                        <div class="flex-grow flex items-center justify-center">
-                            <p class="text-gray-400">Contenido de "Técnicas más utilizadas"</p>
-                        </div>
-                    </div>
-                    <div class="md:col-span-1 p-6 rounded-2xl shadow-lg glass-effect flex flex-col justify-between min-h-[16rem]">
+                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                    <div class="md:col-span-3 p-6 rounded-2xl shadow-lg glass-effect flex flex-col justify-between min-h-[16rem]">
                         <h2 class="text-xl font-semibold mb-4">Comentarios</h2>
-                        <div class="flex-grow flex items-center justify-center">
-                            <!-- Contenedor con scroll más alto -->
-                            <div class="flex-grow overflow-y-auto custom-scrollbar max-h-44">
 
-                                <!-- Recorremos usuarios, pero solo mostramos si tienen comentarios -->
-                                <div *ngFor="let user of usuariosSubject | async; let i = index">
-                                    <div *ngIf="user.comments && (user.comments | keyvalue).length > 0" class="flex justify-between py-2 border-b border-white border-opacity-10 last:border-b-0">
-                                        <!-- Columna izquierda: contenedor vertical -->
-                                        <div class="flex flex-col mr-4">
-                                            <!-- Imagen + Nombre en fila -->
-                                            <div class="flex items-center space-x-4">
-                                                <img [src]="user.picture?.trim() !== '' ? user.picture : defaultPicture" alt="Foto de perfil" class="w-12 h-12 rounded-full object-cover border"/>
-                                                <p class="text-white text-lg font-semibold">{{ user.displayName }}</p>
-                                            </div>
+                       <div class="flex-grow overflow-auto custom-scrollbar">
+                        <!-- Contenedor con grid horizontal y 2 filas por columna -->
+                        <div class="grid grid-flow-col auto-cols-max gap-6 max-h-[32rem] px-2">
+                            <!-- Cada comentario ocupa una celda -->
+                            <ng-container *ngFor="let user of usuariosSubject | async">
+                                <ng-container *ngIf="user.comments && (user.comments | keyvalue).length > 0">
+                                    <div class="flex flex-col justify-between">
+                                    <div class="p-4 rounded bg-white bg-opacity-10 shadow-inner w-72">
+                                        <!-- Imagen + nombre -->
+                                        <div class="flex items-center space-x-4 mb-2">
+                                        <img [src]="user.picture?.trim() !== '' ? user.picture : defaultPicture"
+                                            alt="Foto de perfil"
+                                            class="w-12 h-12 rounded-full object-cover border" />
+                                        <p class="text-white text-lg font-semibold">{{ user.displayName }}</p>
+                                        </div>
 
-                                            <!-- Comentarios debajo -->
-                                            <div class="mt-2">
-                                                <ng-container *ngFor="let com of commentUser(user)">
-                                                    <p class="text-white text-sm italic">{{ com}}</p>
-                                                    <hr class="border-white my-1" />
-                                                </ng-container>
-                                            </div>
+                                        <!-- Comentarios debajo -->
+                                        <div class="overflow-auto custom-scrollbar max-h-32">
+                                        <ng-container *ngFor="let com of commentUser(user)">
+                                            <p class="text-white text-sm italic">{{ com }}</p>
+                                            <hr class="border-white my-1" />
+                                        </ng-container>
                                         </div>
                                     </div>
-                                 </div>
-                            </div>
-                        </div>
+                                    </div>
+                                </ng-container>
+                            </ng-container>
+                         </div>
+                        <br>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -197,9 +195,33 @@
             <div class="lg:col-span-1 p-6 rounded-2xl shadow-lg bg-white bg-opacity-10 flex flex-col justify-between min-h-[16rem]">
                 <h2 class="text-xl font-semibold mb-4">Usuarios Activos</h2>
                 <div class="flex-grow flex items-center justify-center">
-                    <p class="text-gray-400">Contenido de "Usuarios Activos"</p>
+                    <!-- Contenedor con scroll -->
+                        <div  class="flex-grow overflow-y-auto custom-scrollbar h-[700px]">
+                            <!-- Listado de usuarios -->
+                            <div  *ngFor="let user of usuariosSubject | async; let i = index" class="flex items-center justify-between py-2 border-b border-white border-opacity-10 last:border-b-0" >
+                                <!-- columna izquierda-->
+                                <div class="flex items-center space-x-4 mr-2">
+                                    <!-- Imagen con ícono de estado -->
+                                    <div class="relative w-12 h-12">
+                                        <img [src]="user.picture?.trim() !== '' ? user.picture : defaultPicture" alt="Foto de perfil"
+                                           class="w-12 h-12 rounded-full object-cover border transition-all duration-300"
+                                           [ngClass]="{ 'brightness-50': !user.estado }"/>
+                                        
+                                        <!-- Círculo verde en la esquina inferior izquierda si está activo -->
+                                        <div *ngIf="user.estado" class="absolute bottom-0 left-0 w-3 h-3 bg-green-500 rounded-full border-2 border-white"></div>
+                                    </div>
+
+                                    <!-- Nombre del usuario -->
+                                    <p class="text-white text-lg font-semibold transition-all duration-300" [ngClass]="{ 'brightness-50': !user.estado }">
+                                        {{ user.displayName }}
+                                    </p>
+                                </div>
+                            </div>
+                      </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
